added text about what features are created

--- a/Notebook Examples/featureExtraction.ipynb
+++ b/Notebook Examples/featureExtraction.ipynb
@@ -12,6 +12,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**List of created features**\n",
+    "1. Energy\n",
+    "2. Mel Spectogram 40 bands\n",
+    "3. MFCC 13 bands\n",
+    "4. Spectral Centroid\n",
+    "5. Spectral Bandwidth\n",
+    "6. Spectral Rolloff\n",
+    "7. Zero Crossing Rate \n",
+    "\n",
+    "**Total number of features created = 58**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -140,16 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-11-07T14:37:03.081494Z",
-     "start_time": "2019-11-07T14:37:02.987715Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "featuresFile.to_csv(featuresFolder+'Features_for_training_data.csv', header=True, index=False)"
+    "featureFile.head()"
    ]
   }
  ],
