checked the shape of melspectrums

--- a/Notebook Examples/Cough-detection-Trial.ipynb
+++ b/Notebook Examples/Cough-detection-Trial.ipynb
@@ -497,11 +497,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-03T15:12:08.063057Z",
-     "start_time": "2020-05-03T15:11:57.488002Z"
+     "end_time": "2020-05-03T16:30:02.087158Z",
+     "start_time": "2020-05-03T16:29:51.801795Z"
     },
     "scrolled": false
    },
@@ -541,6 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(128, 313)\n",
       "[ 0.00023975 -0.0004543  -0.00041737 ... -0.00025359  0.00023153\n",
       "  0.00017311] 44100\n"
      ]
@@ -573,6 +574,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(128, 313)\n",
       "[0.09740109 0.09542079 0.09197009 ... 0.         0.         0.        ] 44100\n"
      ]
     },
@@ -604,6 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(128, 314)\n",
       "[ 0.00020483  0.00587577  0.01054204 ... -0.00012427 -0.00027374\n",
       " -0.00024812] 44100\n"
      ]
@@ -636,6 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(128, 313)\n",
       "[ 0.01364263  0.01710883  0.01670155 ... -0.00526308 -0.00486098\n",
       " -0.00245204] 44100\n"
      ]
@@ -663,11 +667,19 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(128, 313)\n"
+     ]
     }
    ],
    "source": [
     "for file in listOfAllSoundFiles[0:5]:\n",
-    "    featureExtraction(audioFile=file,targetSampFreq=16000, axis=0, hop_length=256, win_length=512)"
+    "    feat = featureExtraction(audioFile=file,targetSampFreq=16000, axis=0, hop_length=256, win_length=512)\n",
+    "    print(feat.shape)"
    ]
   },
   {
